[tool.poetry]
name = "cli-applications"
version = "0.1.0"
description = ""
authors = ["OscarSilvaOfficial <oscarkaka222@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyInquirer = "^1.0.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
